feat: explore operational activity
